--- a/MoviePick.WindowsFormsUI/Properties/Resources.resx
+++ b/MoviePick.WindowsFormsUI/Properties/Resources.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ApiUrl" xml:space="preserve">
-    <value>https://localhost:44397/api/</value>
+    <value>http://localhost:57869/api/</value>
   </data>
 </root>
